--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Exemplo 05</title>
 </head>
 <body>
+    <div class="main">
+        <header>
+            <h1>Crie sua Conta</h1>
+        </header>   
+        
+        <form class="form" id="form">
+            <div class="controle">
+                <label for="nome">Nome</label>
+                <input type="text"  id="nome">
+                <i class="sucesso"><img src="./src/assets/sucesso.svg" alt=""></i>
+                <i class="error"><img src="./src/assets/erro.svg" alt=""></i>
+                <small> Error </small>
+            </div>
+        </form>
+    </div>
 
 
 
